[gd_scene load_steps=11 format=2]

[ext_resource path="res://BG.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level.gd" type="Script" id=3]
[ext_resource path="res://DeathScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Manager.gd" type="Script" id=7]
[ext_resource path="res://assets/Ludum Dare 30 - 09.ogg" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 164.5, 16.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 11.5, 265.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 162.5, 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 13, 264 )

[node name="Level" type="Node2D"]
pause_mode = 1
script = ExtResource( 3 )

[node name="Manager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="BG" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 140, 227 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 140, 225 )

[node name="DeathScreen" parent="." instance=ExtResource( 6 )]

[node name="BonusTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ClearStage" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -25.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 140, 241 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 140.5, 495.5 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 290.5, 245.5 )
shape = SubResource( 13 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 135.5, -10 )
shape = SubResource( 14 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -14, 247 )
shape = SubResource( 15 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="pressed" from="DeathScreen/Control/Panel/TryAgainForAdd" to="Manager" method="_on_TryAgainForAdd_pressed"]
[connection signal="pressed" from="DeathScreen/Control/Panel/TryAgain" to="Manager" method="_on_TryAgain_pressed"]
[connection signal="timeout" from="BonusTimer" to="." method="_on_BonusTimer_timeout"]
[connection signal="timeout" from="ClearStage" to="." method="_on_ClearStage_timeout"]

[editable path="DeathScreen"]
